Target JDK 8 as the lowest supported runtime